# proyecto_streamlit

./: README.md  pyproject.toml
proyecto_streamlit/: Registro.py  clientes.csv
proyecto_streamlit/pages/: Consulta.py
