[tool.poetry]
name = "proyecto-streamlit"
version = "0.1.0"
description = ""
authors = ["Vivian"]
packages = [{include = "proyecto_streamlit"}]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.12"
streamlit = ">=1.43.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
